# engram

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MVP_PLAN.md  Makefile  README.md  RELEASE.md  SECURITY.md  designed-api.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
Redis research/: Redis Search and Vector Database - Python Implementation Guide.md  RedisVL Technical Implementation Guide.md  RedisVL User Guide Implementation Reference.md
Research/: AI Memory for Memory Decay Scoring and Graph Traversal Queries.md  Cognitive Architecture.md  Converged Cognitive Architecture.md  IMPLEMENTATION_PLAN.md  MEMORY_THEORY.md  Memory Decay Scoring.md  REDIS_VECTOR_SEARCH_ANALYSIS.md  REDIS_VS_POSTGRESQL_COMPARISON.md  chat-gpt-memory.md  checkpoint.md  claude-memory.md  context-builder.md  fact-extraction.md  init_plan.md  plan.md
Research/Redis research/: LangCache Technical Implementation Guide.md  Redis research.md
benchmark/: beam_benchmark.py  cost_tracking.py  engram_stress_benchmark.py  lineage_invariants.py  lineage_writepath.py  locomo_benchmark.py  longmemeval_benchmark.py
benchmark/runs/beam-1m-final/: summary.json
benchmark/runs/beam-1m-updated/: summary.json
benchmark/runs/beam-1m-v5/: summary.json  traces.jsonl
benchmark/runs/engram-stress/: ingest.json  judgments.jsonl  summary.json  traces.jsonl
benchmark/runs/lme-final/: judgments.jsonl  summary.json
benchmark/runs/lme-final-v4/: judgments.jsonl  summary.json
benchmark/runs/lme-updated/: judgments.jsonl  summary.json
benchmark/runs/locomo-final/: summary.json
benchmark/runs/locomo-sonnet/: judgments.jsonl  summary.json  traces.jsonl
benchmark/runs/locomo-updated/: judgments.jsonl  summary.json
docker/init-db/: 01-extensions.sql  02-schema.sql  03-seed.sql
docs/: CHATBOT_CONCEPT.md  api-reference.md  api.md  architecture.md  benchmarks.md  commands.md  concepts.md  configuration.md  diagram.md  diagrams.md  edge-cases.md  examples.md  index.md  long-running-memory.md  mcp-server.md  migration.md  migrations.md  operations.md  production-guide.md  quickstart.md  reliability-testing.md  task-memory.md
docs/javascripts/: mermaid.js
docs/stylesheets/: extra.css
examples/: CHATBOT_CONCEPT.md  basic_usage.py  chatbot.py  engram_mcp_server.py  long_input_usage.py
scripts/: docker-setup.sh  lme_judge.py  longmemeval_harness.py
src/engram/: __init__.py  _version.py  chunking.py  client.py  policy.py  reranking.py
src/engram/core/: __init__.py  _types.py  config.py  exceptions.py  serialization.py
src/engram/embedding/: __init__.py  openai_provider.py  protocol.py  sentence_transformers_provider.py  service.py
src/engram/graph/: __init__.py  models.py  traversal.py
src/engram/health/: __init__.py  checker.py
src/engram/llm/: __init__.py  service.py
src/engram/mcp/: __init__.py  server.py
src/engram/memory/: __init__.py  models.py  store.py
src/engram/providers/: __init__.py  http_retry.py  registry.py
src/engram/providers/embedding/: __init__.py  builtin.py  protocol.py  registry.py
src/engram/providers/llm/: __init__.py  builtin.py  protocol.py  registry.py
src/engram/recall/: __init__.py  models.py  operator.py  temporal.py
src/engram/session/: __init__.py  manager.py  models.py
src/engram/sql/: graph_traverse.sql  hybrid_search.sql  schema.sql  semantic_search.sql
src/engram/sql/migrations/: 001_add_fact_columns.sql  002_add_session_summary.sql  003_add_memory_type.sql  004_add_task_memory.sql  005_widen_memory_type_constraint.sql  006_add_memory_lineage.sql  007_add_event_search.sql
src/engram/storage/: __init__.py  postgres.py
src/engram/task/: __init__.py  context.py  manager.py  models.py
tests/: conftest.py
tests/fixtures/: longmemeval_oracle_gpt4_2655b836.json
tests/integration/: test_add_conversation_extraction.py  test_e2e_all_methods.py  test_full_workflow.py  test_store_guards.py  test_task_guards.py
tests/unit/: test_chatbot_example.py  test_client.py  test_config_comprehensive.py  test_core.py  test_docker_setup_script.py  test_docs_examples.py  test_embedding_comprehensive.py  test_graph.py  test_health.py  test_http_retry.py  test_integration_environment.py  test_llm_service.py  test_long_input.py  test_longmemeval_harness.py  test_mcp_server.py  test_memory_store_comprehensive.py  test_policy.py  test_providers.py  test_recall.py  test_reranking.py  test_session.py  test_storage.py  test_task_client.py  test_task_memory.py
