[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
dynamic = ["version"]
description = "Persistent memory infrastructure for long-running AI agents using PostgreSQL + pgvector"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ahammad Nafiz", email = "ahammadnafiz@outlook.com" }
]
keywords = [
    "ai",
    "memory",
    "llm",
    "postgresql",
    "pgvector",
    "vector-search",
    "semantic-search",
    "cognitive-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
cohere = [
    "cohere>=5.0.0",
]
http = [
    "httpx>=0.26.0,<0.29.0",
]
litellm = [
    "litellm>=1.0.0",
]
gemini = [
    "google-genai>=1.0.0",
]
temporal = [
    "dateparser>=1.2.0",
]
chunking = [
    "chonkie>=1.0.0",
]
sentence-transformers = [
    "sentence-transformers>=2.2.0",
]
rerank = [
    "sentence-transformers>=2.2.0",
]
rerank-onnx = [
    "sentence-transformers[onnx]>=3.0.0",
]
examples = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "cohere>=5.0.0",
    "httpx>=0.26.0,<0.29.0",
    "litellm>=1.0.0",
    "google-genai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "dateparser>=1.2.0",
    "chonkie>=1.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.26.0,<0.29.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "python-dotenv>=1.0.0",
    "dateparser>=1.2.0",
    "chonkie>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ahammadnafiz/engram"
Documentation = "https://ahammadnafiz.github.io/engram"
Repository = "https://github.com/ahammadnafiz/engram.git"
Issues = "https://github.com/ahammadnafiz/engram/issues"
Changelog = "https://github.com/ahammadnafiz/engram/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/engram/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs",
    "/mkdocs.yml",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/RELEASE.md",
    "/SECURITY.md",
]

# ============================================================================
# Ruff - Fast Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["engram"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]

# ============================================================================
# MyPy - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "cohere.*",
    "litellm.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest - Testing framework
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring database",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage - Code coverage
# ============================================================================
[tool.coverage.run]
source = ["src/engram"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/sql/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 60
show_missing = true
